--- a/index.html
+++ b/index.html
@@ -29,18 +29,11 @@
         <img src="Assets/Penguin.gif">
     </section>
     <section class="About">
-        <h1>About me</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum fugit nobis expedita pariatur suscipit dign
-            issimos eos? Et maiores earum alias? Nihil dicta assumenda esse rerum ratione culpa provident! Error, esse.
-        t. Voluptatum fugit nobis expedita pariatur suscipit dign
-            issimos eos? Et maiores earum alias? Nihil dicta assumenda esse rerum ratione culpa provid
-        t. Voluptatum fugit nobis expedita pariatur suscipit dign
-            issimos eos? Et maiores earum alias? Nihil dicta assumenda esse rerum ratione culpa provid
-        t. Voluptatum fugit nobis expedita pariatur suscipit dign
-            issimos eos? Et maiores earum alias? Nihil dicta assumenda esse rerum ratione culpa provid</p>
+        <h1>About</h1>
+        <p></p>
     </section>
     <section class="Stack">
-        <h1>Tech Stack</h1>
+        <h1>Stack</h1>
         <div>
             <div class="html-div">
                <i class="fa-brands fa-html5"></i><p>HTML</p>
@@ -55,24 +48,6 @@
                 <i class="fa-brands fa-linux"></i><p>LINUX</p>
             </div>
         </div>
-    </section>
-    <section class="Projects">
-        <h1>Projects</h1>
-        <div class="container">
-            <div class="project1">
-                <div class="project1-photo"></div>
-                <div class="project1-description"><h1>Password Generator</h1></div>
-            </div>
-            <div class="project2">
-                <div class="project2-photo"></div>
-                <div class="project2-description"></div>
-            </div>
-        </div>
-    </section>
-    <section>
-        <h1>Contact Me</h1>
-        <textarea></textarea>
-    </section>
     <footer></footer>
     <script src="https://kit.fontawesome.com/ea747df6ba.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
