--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     </section>
     <section class="About">
         <h1>About</h1>
-        <p></p>
+        <p>I’m a 15 year old Frontend Web Developer focused on building responsive and user-friendly web interfaces. I’m currently expanding
+            my skills toward full-stack development and exploring cybersecurity to create applications that are both functional and secure.
+            I enjoy learning, problem-solving, and turning ideas into reliable digital experiences.</p>
     </section>
     <section class="Stack">
         <h1>Stack</h1>
