Refactor navigation and update About section text

--- a/index.html
+++ b/index.html
@@ -10,28 +10,31 @@
     <header>
         <h1>Med &lt;/></h1>
         <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Stack</li>
-            <li>Projects</li>
-            <li>Contact</li>
+            <li id="Home" title="Home">
+                          <i class="fa-solid fa-home icon"></i></li>
+            <li id="About" title="About">
+                           <i class="fa-solid fa-info-circle icon" ></i></li>
+            <li id="Stack">
+                           <i class="fa-solid fa-code icon" title="Stack"></i></li>
+            <li id="Projects"title="Projects">
+                            <i class="fa-solid fa-folder-open icon"></i></li>
+            <li id="Contact" title="Contact">
+                             <i class="fa-solid fa-envelope icon"></i></li>
         </ul>
-     </header>
+    </header>
     <section class="Home">
         <div>
             <h1>Hi there I am <span>Mohamed Ed-dib</span></h1>
             <p>I'm a frontend web developer</p>
-            <div><i class="fa-brands fa-x-twitter"></i>
-                <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i></div>
+            <div><a href="https://www.x.com" style="color:var(--text-color);" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.linkedin.com" style="color:var(--text-color);" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.github.com" style="color:var(--text-color);" target="_blank"><i class="fa-brands fa-github"></i></a></div>
         </div>
         <img src="Assets/Penguin.gif">
     </section>
     <section class="About">
         <h1>About</h1>
-        <p>I’m a 15 year old Frontend Web Developer focused on building responsive and user-friendly web interfaces. I’m currently expanding
-            my skills toward full-stack development and exploring cybersecurity to create applications that are both functional and secure.
-            I enjoy learning, problem-solving, and turning ideas into reliable digital experiences.</p>
+        <p>I’m a Frontend Developer focused on building responsive and user-friendly web interfaces. I’m currently expanding my skills toward full-stack development and exploring cybersecurity to create applications that are both functional and secure. I enjoy learning, problem-solving, and turning ideas into reliable digital experiences.</p>
     </section>
     <section class="Stack">
         <h1>Stack</h1>
